tests/miniJava/neg/003516_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if java ( 0 ) { } else { } } }
